--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>1.3</version>
         </dependency>
 
+        <!-- Cmd CLI -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+
         <!-- Jackson (JSON) -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
