Upgrade kafka clients to 0.10.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,8 @@
         <!-- Kafka -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.8.0</artifactId>
-            <version>0.8.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.zookeeper</groupId>
-                    <artifactId>zookeeper</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.0.1</version>
         </dependency>
 
         <!-- Metrics reporting -->
