--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>net.redborder.utils</groupId>
     <artifactId>synthetic-producer</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.4.0</version>
 
     <scm>
         <developerConnection>scm:git:git@github.com:redBorder/synthetic-producer.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>synthetic-producer-1.4.0</tag>
     </scm>
 
     <dependencies>
