--- a/packaging/rpm/Makefile
+++ b/packaging/rpm/Makefile
@@ -16,10 +16,8 @@ SOURCES:
 
 archive: SOURCES
 	cd ../../ && \
-            cd ../../ && \
-            	git archive --prefix=$(PACKAGE_NAME)-$(VERSION)/ \
-            		-o packaging/rpm/SOURCES/$(PACKAGE_NAME)-$(VERSION).tar.gz $(LATEST)
-
+    	git archive --prefix=$(PACKAGE_NAME)-$(VERSION)/ \
+    		-o packaging/rpm/SOURCES/$(PACKAGE_NAME)-$(VERSION).tar.gz HEAD
 
 build_prepare: archive
 	mkdir -p $(RESULT_DIR)
